fix(navigation): theme contrasté

--- a/src/component/navigation/style/module/_default.scss
+++ b/src/component/navigation/style/module/_default.scss
@@ -53,6 +53,10 @@
             background-repeat: no-repeat;
             background-position: 0 100%;
             background-size: #{spacing.space(100% 0.5v)};
+
+            @include forced-color {
+              background-image: linear-gradient(0deg, highlight, highlight);
+            }
           }
         }
       }
@@ -81,6 +85,10 @@
         @include margin-left(2v);
         @include margin-right(0);
         transition: transform 0.3s;
+
+        @include preference.forced-colors {
+          color: buttontext;
+        }
       }
     }
 
@@ -114,6 +122,10 @@
       background-repeat: no-repeat;
       background-position: #{spacing.space(0 3v)};
       background-size: #{spacing.space(2px calc(100% - 6v))};
+
+      @include forced-color {
+        background-image: linear-gradient(0deg, highlight, highlight);
+      }
     }
   }
 
